# start

./: Cargo.toml  README.md
docs/: QUICK_START.md  README.md  ROADMAP.md
docs/sql/: GRAMMAR.md
examples/: embedded.rs  simple.rs
src/: commands.rs  lib.rs  main.rs
src/db/: collection.rs  header.rs  mod.rs  operation_context.rs  recovery_unit.rs  service_context.rs
src/db/catalog/: collection.rs  database.rs  mod.rs  session.rs
src/db/commands/: delete.rs  find.rs  insert.rs  mod.rs  update.rs
src/db/exec/: mod.rs  plan_executor.rs
src/db/ops/: delete.rs  insert.rs  mod.rs  update.rs
src/db/query/: filtering.rs  mod.rs  plan_executor.rs  query_planner.rs
src/db/storage/: mod.rs  record_state.rs
src/db/storage/start_storage/: mod.rs
src/query_builder/: find_query.rs  insert_query.rs  mod.rs
src/query_builder/filtering/: mod.rs  value.rs
src/sql/: ast.rs
src/system/: mod.rs  transaction.rs
src/system/operations/: mod.rs
src/system/query/: mod.rs
src/systypes/: collection.rs  document.rs  header.rs  mod.rs  table.rs
src/sysutils/: mod.rs
src/sysutils/capacity/: mod.rs
src/sysutils/find/: find_collection.rs  many.rs  mod.rs  scan.rs
src/sysutils/header/: mod.rs
src/sysutils/insert/: collection.rs  insert_one.rs  mod.rs  one.rs
src/sysutils/parse/: collection.rs  document.rs  mod.rs
src/utils/: mod.rs
src/utils/find/: mod.rs
src/utils/insert/: mod.rs
start-core/: Cargo.toml
start-sql/: Cargo.toml
start-storage/: Cargo.toml
start-storage/src/: lib.rs
