[package]
name = "start"
version = "0.1.5"
edition = "2024"
description = "Start – Your embedded database."
authors = ["Leon Farafonov <me@leofaraf.com>"]
license = "MIT"

[lib]
name = "start"
path = "src/lib.rs"

[[bin]]
name = "start_bin"
path = "src/main.rs"

[workspace]
resolver = "2"
members = [ "start-core", "start-sql", "start-storage" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9.5"
bson = "2.14.0"
start-storage = { version = "0.1.0", path = "./start-storage/" }

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
]
