[package]
name = "start"
version = "0.3.0"
edition = "2024"
description = "StartDB – Embedded NoSQL Database in Rust"
authors = ["Leon Farafonov <me@leofaraf.com>"]
license = "MIT"

[lib]
name = "start"
path = "src/lib.rs"

[[bin]]
name = "start_bin"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9.5"
bson = "2.14.0"
sqlparser = "0.37"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
]
