[package]
name = "start"
version = "0.4.4"
edition = "2024"
description = "StartDB – Embedded NoSQL Database in Rust"
authors = ["Leon Farafonov <me@leofaraf.com>"]
documentation = "https://docs.rs/start"
repository = "https://github.com/leofaraf/start"
license = "MIT"

[lib]
name = "start"
path = "src/lib.rs"

[[bin]]
name = "start_bin"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9.5"
bson = "2.14.0"
log = "0.4"
# sqlparser = "0.55.0"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
]
